Coodenadas origen predetermidad en duoc

--- a/src/app/pages/forma-viaje/forma-viaje.page.html
+++ b/src/app/pages/forma-viaje/forma-viaje.page.html
@@ -37,9 +37,9 @@
     </ion-item>
 
     <ion-item class="input-item">
-      <ion-label position="stacked">Origen (Ubicación Actual)</ion-label>
-      <ion-input [(ngModel)]="origen" placeholder="Usar ubicación actual" readonly (click)="obtenerUbicacionActual()"></ion-input>
-    </ion-item>
+      <ion-label position="stacked">Origen (Ubicación Fija)</ion-label>
+      <ion-input [(ngModel)]="origen" readonly></ion-input>
+    </ion-item>    
   
     <ion-item class="input-item">
       <ion-label position="stacked">Destino</ion-label>
