--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -17,7 +17,7 @@
     <h2>Página No Encontrada:</h2>
     <h2>Error 404</h2>
     <p>Lo sentimos, la página que buscas no existe.</p>
-    <ion-button color="primary" expand="block" routerLink="/home">
+    <ion-button color="primary" expand="block" routerLink="/elegusuario">
       Volver al Inicio
     </ion-button>
   </div>
