--- a/src/app/pages/viaje/viaje.page.html
+++ b/src/app/pages/viaje/viaje.page.html
@@ -10,6 +10,13 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="content-background">
+  <ion-item lines="none" class="info-box">
+    <ion-icon name="information-circle-outline" slot="start" color="primary"></ion-icon>
+    <ion-label>
+      Si deseas solicitar un viaje a un destino que no está registrado en Reservas, puedes gestionarlo desde esta sección.
+    </ion-label>
+  </ion-item>
+
   <ion-grid>
     <ion-row>
       <ion-col>
