Opción de Acompañantes

--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -40,7 +40,7 @@
       <p><strong>Destino:</strong> {{ viajeSeleccionado.destino }}</p>
 
       <ion-item lines="none" class="passenger-item">
-        <ion-label class="passenger-label">Cantidad de Pasajeros</ion-label>
+        <ion-label class="passenger-label">Cantidad de Acompañantes</ion-label>
         <div class="counter-container">
           <ion-button (click)="decrementarPasajeros()" fill="outline" color="danger" class="counter-button">
             <ion-icon name="remove-outline"></ion-icon>
