--- a/src/app/pages/reserva/reserva.page.scss
+++ b/src/app/pages/reserva/reserva.page.scss
@@ -66,4 +66,30 @@ ion-icon {
 ion-label {
     font-size: 0.95em;
 }
+
+.passenger-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.counter-container {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  gap: 10px; /* Espacio entre elementos */
+  margin-top: 5px;
+}
+
+.counter-button {
+  width: 40px;
+  height: 40px;
+}
+
+.passenger-count {
+  font-size: 1.5em;
+  text-align: center;
+  padding: 0 10px;
+}
+
 }
