--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -41,6 +41,19 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4">
+        <ion-card button [routerLink]="['/lista-pasajeros']">
+          <ion-card-content>
+            <img src="assets/img/historial-registro.png" alt="Viaje" />
+            <p>Historial</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
     
 
   <section class="img-section">
