Bloqueo conductor a su propio viaje y modificación en historial conductor

--- a/src/app/pages/lista-conductor/lista-conductor.page.html
+++ b/src/app/pages/lista-conductor/lista-conductor.page.html
@@ -13,7 +13,7 @@
   <ion-item lines="none" class="info-box">
     <ion-icon name="information-circle-outline" slot="start" color="primary"></ion-icon>
     <ion-label>
-      Aquí podras ver un listado de viajes disponibles y reservar el que más te acomode.
+      Aquí podras ver el listado de viajes has generado.
     </ion-label>
   </ion-item>
 
