Arreglos diseño de Listado Pasajero

--- a/src/app/pages/lista-conductor/lista-conductor.page.html
+++ b/src/app/pages/lista-conductor/lista-conductor.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>listaConductor</ion-title>
+  <ion-toolbar color="dark">
+    <ion-title style="text-align: center;">Lista Conductor</ion-title>
   </ion-toolbar>
 </ion-header>
 
