Redireccionamiento en lista conductor y pasajero

--- a/src/app/pages/lista-pasajeros/lista-pasajeros.page.html
+++ b/src/app/pages/lista-pasajeros/lista-pasajeros.page.html
@@ -40,7 +40,7 @@
     <ion-grid>
       <ion-row class="ion-justify-content-center">
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/elegusuario']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/index']" style="margin-top: -5px;">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
