--- a/src/app/pages/viaje/viaje.page.html
+++ b/src/app/pages/viaje/viaje.page.html
@@ -65,5 +65,22 @@
     </ion-row>
   </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar color="dark">
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col class="ion-text-center" size="auto">
+          <ion-button fill="clear" [routerLink]="['/index']" style="margin-top: -5px;">
+            <ion-icon name="home-outline" size="large"></ion-icon>
+          </ion-button>
+        </ion-col>
 
-
+        <ion-col class="ion-text-center" size="auto">
+          <ion-button fill="clear" [routerLink]="['/ajustes']" style="margin-top: -5px;">
+            <ion-icon name="settings-outline" size="large"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
